@@ -75,7 +75,7 @@ public class SystemTest extends junit.framework.TestCase {
         Integer b[] = new Integer[20];
         int i = 0;
         while (i < a.length) {
-            a[i] = new Integer(i);
+            a[i] = Integer.valueOf(i);
             ++i;
         }
         System.arraycopy(a, 0, b, 0, a.length);
@@ -317,7 +317,7 @@ public class SystemTest extends junit.framework.TestCase {
         }
 
         try {
-            map.containsKey(new Integer(10));
+            map.containsKey(Integer.valueOf(10));
             fail("Should throw ClassCastException.");
         } catch (ClassCastException e) {
             // expected
@@ -331,7 +331,7 @@ public class SystemTest extends junit.framework.TestCase {
         }
 
         try {
-            map.containsValue(new Integer(10));
+            map.containsValue(Integer.valueOf(10));
             fail("Should throw ClassCastException.");
         } catch (ClassCastException e) {
             // expected
@@ -345,7 +345,7 @@ public class SystemTest extends junit.framework.TestCase {
         }
 
         try {
-            map.get(new Integer(10));
+            map.get(Integer.valueOf(10));
             fail("Should throw ClassCastException.");
         } catch (ClassCastException e) {
             // expected
@@ -359,7 +359,7 @@ public class SystemTest extends junit.framework.TestCase {
         }
 
         try {
-            map.put("AAA", new Integer(10));
+            map.put("AAA", Integer.valueOf(10));
             fail("Should throw UnsupportedOperationException.");
         } catch (UnsupportedOperationException e) {
             // expected
